--- a/service-gateway/conf/application.conf
+++ b/service-gateway/conf/application.conf
@@ -41,10 +41,10 @@ fixedConnectionPool = 9
 
 db.default.hikaricp.minimumIdle = ${fixedConnectionPool}
 db.default.hikaricp.maximumPoolSize = ${fixedConnectionPool}
-db.default.url="jdbc:postgresql://localhost:5432/{YOUR_DB_NAME}"
+db.default.url="jdbc:postgresql://localhost:5432/emsTest"
 
-db.default.username={YOUR_DB_USERNAME}
-db.default.password="{YOUR_DB_PASSWORD}"
+db.default.username=postgres
+db.default.password="drexx61"
 
 db.default.migration.placeholderPrefix="$flyway{{{"
 db.default.migration.placeholderSuffix="}}}"
