--- a/binder/pom.xml
+++ b/binder/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>hibernate-validator</artifactId>
             <version>5.4.3.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.encentral.scaffold</groupId>
+            <artifactId>image-inverter-impl</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 </project>
