--- a/service-gateway/pom.xml
+++ b/service-gateway/pom.xml
@@ -136,6 +136,12 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.12.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.encentral.scaffold</groupId>
+            <artifactId>image-inverter-api</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
