--- a/service-gateway/conf/application.conf
+++ b/service-gateway/conf/application.conf
@@ -66,7 +66,7 @@ play {
 
 api.version="1.0.0"
 swagger.api.host="localhost:9000"
-swagger.api.info.title="Play Framework Minimal"
+swagger.api.info.title="Basic Image Inverter"
 swagger.api.info.termsOfServiceUrl="http://encentralsolutions.com"
 swagger.api.info.contact="adeshina@encentralsolutions.com"
 swagger.api.info.license="Licence Data. Coming Soon.."
